--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +66,11 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <!--<configuration>
+                    <groups>low</groups>
+                    <groups>med</groups>
+                    <groups>high</groups>
+                </configuration>-->
             </plugin>
         </plugins>
     </build>
